k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-http-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-http-server
  template:
    metadata:
      labels:
        app: python-http-server
    spec:
      containers:
      - name: python-http-server
        image: localhost:32000/py-server:latest
        ports:
        - containerPort: 8000
          name: server
        - containerPort: 8001
          name: metrics
