k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-http-server-service
spec:
  selector:
    app: python-http-server
  ports:
  - protocol: TCP
    port: 8000
    name: server
    targetPort: 8000
  - protocol: TCP
    port: 8001
    name: metrics
    targetPort: 8001
